--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,3 +16,16 @@ jobs:
           go-version: ${{matrix.go}}
       - run: go test ./...
       - run: go run ./src/math.go
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v3
+        with:
+          push: false
+          tags: redemption-001/fc3-ci:latest
